[package]
name = "pom"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
indicatif = "0.18.3"
inquire = "0.9.2"
notify-rust = "4.11.7"
rodio = {version = "0.21.1", default-features = false, features = ["symphonia-mp3", "playback"]}
